I made the new tail button smaller. Fixed the bounding box hover issue with the action buttons.

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -46,9 +46,11 @@ body {background:url("../images/bg_main.png") top left repeat-x #eee;margin: 0;p
  */
  
 #masthead {height:130px;}
-  #masthead #logo {height:100px;}
+  #masthead #logo {height:100px;width:300px;display:block;float:left;}
   #masthead #logo h1 a {line-height:100px;display:inline-block;}
-  #masthead nav {height:30px;float:left;}
+  #masthead #utility {float:right;height:100px;margin:0 20px 0 0;}
+    #masthead #utility a {color:white;text-decoration:none;line-height:100px;}
+  #masthead nav {height:30px;float:left;width:100%;}
 
 nav ul {margin:0 20px;line-height:30px;}
 nav li {margin:0 20px 0 0;float:left;}
@@ -62,12 +64,12 @@ nav li {margin:0 20px 0 0;float:left;}
 article {margin:20px;-webkit-box-shadow:0 0 3px #cecece;background-color:white;}
 article .heading {background-color:#f7f7f7;height:60px;border-bottom:1px solid #ddd;position:relative;}
 article header h1 {font-size:30px;line-height:60px;margin:0 10px;color:#939393;display:inline-block;}
-article .actions a span {display:block;margin-left:-9999px;}
-article .actions #new-tail {width:148px;height:40px;display:inline-block;background:url("../images/btn_new_tail.png") top left no-repeat;float:right;}
+article .actions a span {display:inline-block;margin-left:-9999px;}
+article .actions #new-tail {width:133px;height:36px;display:inline-block;background:url("../images/btn_new_tail.png") top left no-repeat;float:right;}
 article .actions #start-tail {background:url("../images/btn_tail_play.png") top left no-repeat;width:36px;height:36px;display:block;}
 article .actions #stop-tail {background:url("../images/btn_tail_pause.png") top left no-repeat;width:36px;height:36px;display:block;}
-  #start-tail, #stop-tail {position:absolute;top: 12px;right: 170px;}
-  #new-tail {position:absolute;top: 10px;right: 10px;}
+  #start-tail, #stop-tail {position:absolute;top: 11px;right: 150px;}
+  #new-tail {position:absolute;top: 11px;right: 10px;}
 
 /*
  * Tails
